--- a/static/login.html
+++ b/static/login.html
@@ -14,9 +14,27 @@
             <div class="login-header">
                 <div class="logo">
                     <img src="icon.ico" alt="Logo" class="logo-img">
-                    <h1>Sistema Empresarial</h1>
+                    <h1>🚀 Sistema Empresarial</h1>
                 </div>
-                <p class="login-subtitle">Faça login para acessar o sistema</p>
+                <p class="login-subtitle">Bem-vindo! Faça login para acessar o sistema</p>
+                <div class="login-features">
+                    <div class="feature">
+                        <i class="fas fa-box"></i>
+                        <span>Gestão de Produtos</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-boxes"></i>
+                        <span>Controle de Estoque</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-users"></i>
+                        <span>Gestão de Clientes</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-chart-bar"></i>
+                        <span>Relatórios</span>
+                    </div>
+                </div>
             </div>
 
             <form class="login-form" id="loginForm">
@@ -52,7 +70,7 @@
             </form>
 
             <div class="login-footer">
-                <p>Usuário padrão: <strong>admin</strong> | Senha: <strong>admin</strong></p>
+                <p>Usuário padrão: <strong>erick</strong> | Senha: <strong>visual3369</strong></p>
                 <div class="theme-toggle">
                     <button class="btn btn-info btn-sm" onclick="toggleTheme()">
                         <i class="fas fa-moon"></i>
@@ -90,7 +108,7 @@
                 const remember = document.getElementById('remember').checked;
 
                 // Validação simples
-                if (username === 'admin' && password === 'admin') {
+                if (username === 'erick' && password === 'visual3369') {
                     this.loginSuccess(username, remember);
                 } else {
                     this.showError('Usuário ou senha incorretos!');
