--- a/static/index.html
+++ b/static/index.html
@@ -159,10 +159,13 @@
             <!-- ESTOQUE -->
             <section id="estoque" class="section">
                 <div class="section-header">
-                    <h2><i class="fas fa-boxes"></i> Estoque</h2>
+                    <h2><i class="fas fa-boxes"></i> Controle de Estoque</h2>
                     <div class="section-actions">
-                        <button class="btn btn-success" onclick="showModal('adjust-stock-modal')">
-                            <i class="fas fa-plus"></i> Ajustar Estoque
+                        <button class="btn btn-success" onclick="window.sistema.recarregarEstoque()">
+                            <i class="fas fa-sync-alt"></i> Recarregar do Supabase
+                        </button>
+                        <button class="btn btn-primary" onclick="window.sistema.showFormEstoque()">
+                            <i class="fas fa-plus"></i> Adicionar Item
                         </button>
                     </div>
                 </div>
