--- a/static/index.html
+++ b/static/index.html
@@ -53,9 +53,11 @@
                     <button class="btn btn-info" onclick="toggleTheme()">
                         <i class="fas fa-moon"></i>
                     </button>
-                    <button class="btn btn-danger" onclick="logout()">
-                        <i class="fas fa-sign-out-alt"></i>
-                        Sair
+                    <button class="btn btn-success" onclick="window.sistema.recarregarDadosSupabase()" title="Sincronizar com Supabase">
+                        <i class="fas fa-sync-alt"></i>
+                    </button>
+                    <button class="btn btn-warning" onclick="logout()">
+                        <i class="fas fa-sign-out-alt"></i> Sair
                     </button>
                 </div>
             </div>
